--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "This is a Portfolio for demo purposes only.",
   "main": "app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node app.js"
   },
   "author": "Shreyank Jadiya",
   "license": "ISC",
